# finances_experiments

backend/go-gin/: .gitignore  .travis.yml  Makefile  README.md  docker-compose.yaml  go.mod  go.sum  sqlboiler.toml
backend/go-gin/cmd/fincli/: main.go
backend/go-gin/cmd/finservice/: main.go
backend/go-gin/docs/api/: finances.api.yaml
backend/go-gin/docs/config/: dev.yaml
backend/go-gin/docs/database_evolution/: 000001_create_table_users.up.sql  000002_create_table_books.up.sql  000003_create_table_user_rights.up.sql  000004_create_table_accounts.up.sql  000005_create_table_transactions_and_splits.up.sql
backend/go-gin/docs/database_scripts/: create_dev_database.sql  fixtures.dev.sql
backend/go-gin/pkg/controller/: books.go  keys.go  parameters.go  route.go  tokens.go  util.go
backend/go-gin/pkg/controllerstest/: tokens_test.go
backend/go-gin/pkg/problem/: constructors.go  (+2 more)
backend/kotlin-vertx/: .gitignore  Makefile  README.md  build.gradle  settings.gradle
backend/rails/: .gitignore  .rubocop.yml  Gemfile  Gemfile.original.bak  Guardfile  RAILS_CLI.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/rails/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  routes.rb  sidekiq.yml
backend/rails/db/: seeds.rb  structure.sql
backend/rails/do/: README.md  check
backend/rails/spec/: rails_helper.rb  spec_helper.rb
backend/rust/finances-service-hyper/: Cargo.toml  README.md  api_test.http
backend/rust/finances-service-hyper/src/: main.rs  routes.rs
backend/rust/finances-service-warp/: Cargo.toml
(+99 files in other folders)
