[package]
name = "finances-service-hyper"
version = "0.1.0"
authors = ["Adeynack <Adeynack@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.1"
tokio = { version = "0.2.10", features = ["full"] }
regex = "*"
